@@ -6,10 +6,11 @@ Put your custom css and css overrides in this file.  By restricting
 your css changes to custom-style.css, your changes will not be overwritten 
 when upgrading to a new version of this theme.
 
-Steps to customize your 0Point theme:                       
+Steps to customize your 0 Point theme:                       
 1. Add your custom css to this file                
 2. Uncomment different examples and modify data as you wish 
 3. Clear cached data at admin/settings/performance 
+4. Save this file with a different name to avoid loosing it after a theme update.
 */
 /****************************/
 
