@@ -18,7 +18,8 @@ regions[user2] = User 2
 regions[user3] = User 3
 regions[user4] = User 4
 regions[content_top] = Top content
-regions[content_middle] = Middle content
+regions[node_middle] = Middle node
+regions[node_bottom] = Bottom node
 regions[content_bottom] = Bottom content
 regions[user5] = User 5
 regions[user6] = User 6
