@@ -1,5 +1,9 @@
 CHANGELOG - 0 Point for Drupal 6
 
+0 Point (Jan 20, 2010)
+----------------------
+  Just a few improvements
+
 0 Point (Feb 19, 2010)
 ----------------------
 
